[metadata]
name = "snowauth"
version = version = attr: snowauth.__version__

[options]
name = snowauth
version = attr: example.__version__
author = Branden Ciranni, Daniel Wilczak
author_email = daniel.wilczak@snowflake.com
url = https://github.com/sfc-gh-dwilczak/snowauth
description = A package for the simple local management of snowpark for python connections.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Snowflake, Snowpark
license = mit
classifiers =
    Topic :: Printing
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Intended Audience :: Developers

install_requires =
    snowflake-snowpark-python
    toml

package_dir=
    =src